Improved grapher